--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "cypress-hell",
-  "version": "1.0.0",
+  "name": "cypress-snapshots",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all clean -p serve compile",
+    "start": "npm-run-all clean -p watch serve cypress",
     "clean": "rimraf dist",
-    "compile": "tsc -w",
+    "compile": "tsc",
+    "watch": "npm run compile -- -w",
     "serve": "node index.js",
-    "cypress": "./node_modules/.bin/cypress open",
-    "cypress-ci": "./node_modules/.bin/cypress run"
+    "cypress": "cypress open",
+    "cypress-ci": "cypress run",
+    "update-snapshots": "npm run cypress-ci -- --env updateSnapshots=true",
+    "publish": "npm run clean && npm run compile && npm publish"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/martinbojnansky/cypress-hell.git"
+    "url": "git+https://github.com/martinbojnansky/cypress-snapshots.git"
   },
   "keywords": [
     "cypress",
@@ -26,9 +29,9 @@
   "author": "Martin Bojnansky",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/martinbojnansky/cypress-hell/issues"
+    "url": "https://github.com/martinbojnansky/cypress-snapshots/issues"
   },
-  "homepage": "https://github.com/martinbojnansky/cypress-hell#readme",
+  "homepage": "https://github.com/martinbojnansky/cypress-snapshots#readme",
   "devDependencies": {
     "@types/cypress": "^1.1.3",
     "@types/jest": "^26.0.23",
