--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "cypress-snapshots",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "dist",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "npm-run-all clean -p watch serve cypress",
     "clean": "rimraf dist",
@@ -12,7 +15,7 @@
     "cypress": "cypress open",
     "cypress-ci": "cypress run",
     "update-snapshots": "npm run cypress-ci -- --env updateSnapshots=true",
-    "publish": "npm run clean && npm run compile && npm publish"
+    "publish-package": "npm run clean && npm run compile && npm publish"
   },
   "repository": {
     "type": "git",
@@ -37,7 +40,6 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "@types/pixelmatch": "^5.2.3",
-    "browser-sync": "^2.26.14",
     "cypress": "^7.5.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.3.2"
