--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist",
   "files": [
-    "dist"
+    "dist/*"
   ],
   "scripts": {
     "start": "npm-run-all clean -p watch serve cypress",
@@ -40,6 +40,7 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "@types/pixelmatch": "^5.2.3",
+    "@types/vue": "^2.0.0",
     "cypress": "^7.5.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.3.2"
