--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-snapshots",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "main": "dist",
   "files": [
@@ -14,7 +14,7 @@
     "serve": "node index.js",
     "cypress": "cypress open",
     "cypress-ci": "cypress run",
-    "update-snapshots": "npm run cypress-ci -- --env updateSnapshots=true",
+    "update-snapshots": "npm run cypress-ci --updateSnapshots=true",
     "publish-package": "npm run clean && npm run compile && npm publish"
   },
   "repository": {
