Organizes into two projects.

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -7,8 +7,30 @@ on:
     branches: [master, dev/*] 
 
 jobs:
-  start:
+  verify_plugin:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: plugin
+
+    strategy:
+      matrix:
+        node-version: [10.x]
+
+    steps:   
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}   
+      - run: npm i
+      - run: npm run build
+
+  verify_examples:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: examples
 
     strategy:
       matrix:
@@ -16,6 +38,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: cypress-io/github-action@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          verify: npm run start-ci
+          node-version: ${{ matrix.node-version }} 
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          build: npm ci
+          start: npm run start-ci
