--- a/examples/package.json
+++ b/examples/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "cypress-snapshots",
-  "version": "0.0.6",
+  "name": "cypress-snapshots-examples",
+  "version": "0.0.1",
   "description": "",
-  "main": "dist",
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "start": "npm-run-all clean -p watch serve cypress",
-    "start-ci": "npm-run-all clean compile -p serve cypress-ci",
-    "clean": "rimraf dist",
-    "compile": "tsc",
-    "watch": "npm run compile -- -w",
+    "start": "npm-run-all -p -r serve test",
+    "start-ci": "npm-run-all -p -r serve test-ci",
     "serve": "node index.js",
-    "cypress": "cypress open",
-    "cypress-ci": "cypress run",
-    "update-snapshots": "npm run cypress-ci --updateSnapshots=true",
-    "publish-package": "npm run clean && npm run compile && npm publish"
+    "test": "cypress open",
+    "test-ci": "cypress run",
+    "update-snapshots": "npm run test-ci --updateSnapshots=true"
   },
   "repository": {
     "type": "git",
@@ -38,14 +30,11 @@
   "homepage": "https://github.com/martinbojnansky/cypress-snapshots#readme",
   "devDependencies": {
     "@types/cypress": "^1.1.3",
-    "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
-    "@types/pixelmatch": "^5.2.3",
     "cypress": "^7.5.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "cypress-snapshots": "^0.0.9"
   },
-  "dependencies": {
-    "pixelmatch": "^5.2.1"
-  }
+  "dependencies": {}
 }
