--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}  
       - run: npm ci
-      - run: npm run update-snapshots
+      - run: npm run update-snapshots --ignoreSnapshotError=true
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Snapshots change
