--- a/examples/package.json
+++ b/examples/package.json
@@ -8,7 +8,7 @@
     "serve": "node index.js",
     "test": "cypress open",
     "test-ci": "cypress run",
-    "update-snapshots": "npm run test-ci --updateSnapshots=true"
+    "update-snapshots": "npm run test-ci --updateSnapshots=true --ignoreSnapshotError=true"
   },
   "repository": {
     "type": "git",
