--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -34,7 +34,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        os: [ubuntu-latest]
         node-version: [10.x]
 
     steps:
