Tries to commit all at once

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -59,16 +59,17 @@ jobs:
           npm ci
           npm run start-ci --updateSnapshots=false --ignoreSnapshotError=false --snapshotsOs=${{matrix.os}}
 
-      - name: Update snapshots
-        if: ${{ contains(github.ref, 'refs/heads/dev/') }}
-        run: |
-          npm ci
-          npm run start-ci --updateSnapshots=true --ignoreSnapshotError=true --snapshotsOs=${{matrix.os}}
-      - name: Commit snapshots
-        if: ${{ contains(github.ref, 'refs/heads/dev/') }}
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Snapshots change (${{ matrix.os }})
-          commit_options: '--no-verify --signoff'
-          push_options: '--force'
-          file_pattern: examples/cypress/*.png
+  commit_snapshots:
+    runs-on: ubuntu_latest
+    if: ${{ contains(github.ref, 'refs/heads/dev/') }}
+    needs: verify_examples
+    defaults:
+      run:
+        working-directory: examples
+
+    steps: 
+      run:
+        git add **/*.snap.txt
+        git commit -m "Snapshots updated"
+        git push
+      
