--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -46,7 +46,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}  
-        run: git pull
+        
+      - run: git pull
       
       - name: Build plugin
         working-directory: plugin
