--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -6,7 +6,9 @@ on:
   pull_request:
     branches: [master, dev/*] 
 
-concurrency: ${{ github.ref }}
+concurrency:
+  group: ${{ github.head_ref }}
+  cancel-in-progress: true
 
 jobs:
   verify_plugin:
