--- a/examples/cypress/.gitignore
+++ b/examples/cypress/.gitignore
@@ -1,5 +1,5 @@
 screenshots
 videos
-**/*-snapshots/**/actual--*.snap.png
-**/*-snapshots/**/diff--*.snap.png
-**/*-snapshots/**/*--unknown.snap.png
+**/*-snapshots/**/actual.*.snap.png
+**/*-snapshots/**/diff.*.snap.png
+**/*-snapshots/**/*.unknown.snap.png
