--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -79,3 +79,5 @@ jobs:
           commit_message: Snapshots change (${{ matrix.os }})
           commit_options: '--no-verify --signoff'
           file_pattern: examples/cypress/*.snap.png
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
