--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -70,23 +70,23 @@ jobs:
           npm ci
           npm run start-ci --updateSnapshots=true --ignoreSnapshotError=true --snapshotsSuffix=${{matrix.os}}
 
-      - name: Pull
+      - name: Commit snapshots
         if: ${{ contains(github.ref, 'refs/heads/dev/') }}
         run: |
           git pull
-          
-      - name: LFS add
-        run: |
-          git lfs add *
+          git add *
+          git lfs push
           git lfs status
+          git commit -m "Snapshosts change (${{ matrix.os }})"
+          git push
 
-      - name: Commit snapshots
-        if: ${{ contains(github.ref, 'refs/heads/dev/') }}
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Snapshots change (${{ matrix.os }})
-          commit_options: ''
-          file_pattern: examples/cypress/*.snap.png
-          skip_dirty_check: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Commit snapshots
+      #   if: ${{ contains(github.ref, 'refs/heads/dev/') }}
+      #   uses: stefanzweifel/git-auto-commit-action@v4
+      #   with:
+      #     commit_message: Snapshots change (${{ matrix.os }})
+      #     commit_options: ''
+      #     file_pattern: examples/cypress/*.snap.png
+      #     skip_dirty_check: false
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
