--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -74,11 +74,11 @@ jobs:
         if: ${{ contains(github.ref, 'refs/heads/dev/') }}
         run: |
           git pull
-          git add *
+          git add *.snap.png
           git lfs push
           git lfs status
           git commit -m "Snapshosts change (${{ matrix.os }})"
-          git push
+          git push ${{ github.head_ref }}
 
       # - name: Commit snapshots
       #   if: ${{ contains(github.ref, 'refs/heads/dev/') }}
