--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -52,33 +52,32 @@ jobs:
           node-version: ${{ matrix.node-version }}  
         
       
-      - name: Build plugin
-        working-directory: plugin
-        run: |
-          npm i
-          npm run build
+      # - name: Build plugin
+      #   working-directory: plugin
+      #   run: |
+      #     npm i
+      #     npm run build
 
-      - name: Verify snapshots
-        if: ${{ !contains(github.ref, 'refs/heads/dev/') }}
-        run: |
-          npm ci
-          npm run start-ci --updateSnapshots=false --ignoreSnapshotError=false --snapshotsSuffix=${{matrix.os}}
+      # - name: Verify snapshots
+      #   if: ${{ !contains(github.ref, 'refs/heads/dev/') }}
+      #   run: |
+      #     npm ci
+      #     npm run start-ci --updateSnapshots=false --ignoreSnapshotError=false --snapshotsSuffix=${{matrix.os}}
       
-      - name: Update snapshots
-        if: ${{ contains(github.ref, 'refs/heads/dev/') }}
-        run: |
-          npm ci
-          npm run start-ci --updateSnapshots=true --ignoreSnapshotError=true --snapshotsSuffix=${{matrix.os}}
+      # - name: Update snapshots
+      #   if: ${{ contains(github.ref, 'refs/heads/dev/') }}
+      #   run: |
+      #     npm ci
+      #     npm run start-ci --updateSnapshots=true --ignoreSnapshotError=true --snapshotsSuffix=${{matrix.os}}
 
       - name: Commit snapshots
         if: ${{ contains(github.ref, 'refs/heads/dev/') }}
-        run: |
-          git pull
-          git add *.snap.png
-          git lfs push ${{ github.ref }}
-          git lfs status
-          git commit -m "Snapshosts change (${{ matrix.os }})"
-          git push ${{ github.ref }}
+        run: git pull
+        run: git add *.snap.png
+        run: git lfs push ${{ github.ref }}
+        run: git lfs status
+        run: git commit -m "Snapshosts change (${{ matrix.os }})"
+        run: git push ${{ github.ref }}
 
       # - name: Commit snapshots
       #   if: ${{ contains(github.ref, 'refs/heads/dev/') }}
