--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -74,10 +74,10 @@ jobs:
         # if: ${{ contains(github.ref, 'refs/heads/dev/') }}
       - run: git pull
       - run: git add *.snap.png
-      - run: git lfs push ${{ github.head_ref }}
+      - run: git lfs push origin dev/repo-size
       - run: git lfs status
       - run: git commit -m "Snapshosts change (${{ matrix.os }})"
-      - run: git push ${{ github.head_ref }}
+      - run: git push origin dev/repo-size
 
       # - name: Commit snapshots
       #   if: ${{ contains(github.ref, 'refs/heads/dev/') }}
