--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -72,7 +72,10 @@ jobs:
 
       # - name: Commit snapshots
         # if: ${{ contains(github.ref, 'refs/heads/dev/') }}
-      - run: git pull
+      - run: |
+          git pull
+          git config user.name "actions@github.com"
+          git config user.email "GitHub Actions"
       - run: git add *.snap.png
       - run: git lfs push origin dev/repo-size
       - run: git lfs status
