--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -75,7 +75,7 @@ jobs:
           git config user.name "actions@github.com"
           git config user.email "GitHub Actions"
           git add *.snap.png
-          git lfs push origin ${github.ref##*/}
+          git lfs push origin ${{github.ref}}
           git lfs status
           git commit -m "Snapshosts change (${{ matrix.os }})" || echo "No changed snapshots."
-          git push origin ${github.ref##*/}
+          git push origin ${{github.ref}}
